--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Site</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="/assets/icons/website.ico" />
   <script src="script.js"></script>
 </head>
 <body>
