Updated about page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <title>Resume</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/resume-conversion-script.js" defer></script>
+    <script>
+      loadAsAbout();
+    </script>
   </head>
   <body>
     
