--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/resume-conversion-script.js" defer></script>
     <script>
-      loadAsAbout();
+      document.addEventListener("DOMContentLoaded", loadAsAbout())
     </script>
   </head>
   <body>
