--- a/about.html
+++ b/about.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/resume-conversion-script.js" defer></script>
     <script>
-      document.addEventListener("DOMContentLoaded", () => loadAsAbout, false)
+      document.addEventListener("DOMContentLoaded", () => 
+        {
+          loadAsAbout().then(console.log("Loaded json content."));
+        }
+      )
     </script>
   </head>
   <body>
