--- a/about.html
+++ b/about.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/resume-conversion-script.js" defer></script>
     <script>
-      document.addEventListener("DOMContentLoaded", () => 
-        {
-          loadAsAbout().then(console.log("Loaded json content."));
-        }
-      )
+      document.addEventListener("DOMContentLoaded", loadAsAbout)
     </script>
   </head>
   <body>
