update content loader

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/resume-conversion-script.js" defer></script>
     <script>
-      document.addEventListener("DOMContentLoaded", loadAsAbout)
+      loadAsAbout(); // adds proper content loaded listener for this page.
     </script>
   </head>
   <body>
