updated script tag in about.html

--- a/about.html
+++ b/about.html
@@ -7,11 +7,12 @@
     <title>Resume</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/resume-conversion-script.js" defer></script>
-    <script>
-      loadAsAbout(); // adds proper content loaded listener for this page.
-    </script>
+    
   </head>
   <body>
-    
+    <!-- content will be loaded from json file -->
   </body>
+  <script>
+    loadAsAbout(); // adds proper content loaded listener for this page.
+  </script>
 </html>
