--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,8 @@
     <script src="/resume-conversion-script.js" defer></script>
   </head>
   <body>
-    <p>RESUME</p>
   </body>
+  <script>
+    loadAsResume();
+  </script>
 </html>
